# JaviVoiceAssistant

./: README.md  pipewire-fix.md  pom.xml
cpp/avg-screen-color/: CMakeLists.txt  JNIDesktopBinding.h  main.cpp
keys/: genkeys.sh
src/main/java/: JNIDesktopBinding.java  MPrisCTL.java  Main.java  MeasureThread.java  VoiceAssistant.java  WebServer.java  WebServerThread.java
src/main/java/Overlay/: Overlay.java  OverlayThread.java
src/main/java/RemoteVoskProtocolClient/: Client.java  ClientMain.java
src/main/java/com/discord/: DiscordRPCStatus.java
src/main/java/com/openai/: OpenAPIConnector.java
src/main/java/configuration/: Manager.java
src/main/java/dbus/mpris/: MPrisCTL.java  (+1 more)
src/main/java/firstTimeSetup/: Setup.java  Ui.java  Ui_Dialog.java
src/main/java/general/: CmdMask.java  CommandMask.java  Main.java  MeasureThread.java  VoiceAssistant.java  WebServer.java  WebServerThread.java
src/main/java/plugins/: CFGManager.java  JPlugin.java  Manager.java  Plugin.java
src/main/java/progsetup/: Ui.java  Ui_Dialog.java
src/main/java/remoteProcessingClient/: Client.java
src/main/java/remoteProcessingServer/: ServerSTT.java  ServerTTS.java  TextToSpeech.java
src/main/java/tts/: AudioPlayer.java  TextToSpeech.java
src/main/java/types/: Metadata.java
src/main/java/voicecommands/: VoicCommandAI.java  VoiceCommandAI.java  VoiceCommandOpen.java  VoiceCommandPlayback.java  VoiceCommandReconf.java  VoiceCommandShutdown.java  VoiceCommandVolume.java  VoiceCommandsOverlay.java
src/main/resources/configuration/: VoiceAssistant.properties
